[gd_scene load_steps=19 format=3]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="2"]
[ext_resource type="Script" path="res://scripts/components/hurtbox_component.gd" id="3"]
[ext_resource type="Script" path="res://scenes/weapons/basic_weapon.gd" id="4"]
[ext_resource type="PackedScene" path="res://scenes/weapons/projectile.tscn" id="5"]
[ext_resource type="Script" path="res://scripts/components/pickup_collector.gd" id="6"]
[ext_resource type="Script" path="res://scenes/weapons/punch_weapon.gd" id="7"]
[ext_resource type="PackedScene" path="res://scenes/weapons/punch.tscn" id="8"]
[ext_resource type="Script" path="res://scripts/components/stats_component.gd" id="9"]
[ext_resource type="Script" path="res://scripts/resources/stat_block.gd" id="10"]
[ext_resource type="Script" path="res://scripts/components/experience_component.gd" id="11"]
[ext_resource type="Script" path="res://scripts/components/status_effect_component.gd" id="12"]
[ext_resource type="Script" path="res://scripts/components/inventory_component.gd" id="13"]
[ext_resource type="Script" path="res://scenes/player/inventory_visual.gd" id="14"]

[sub_resource type="Resource" id="player_base_stats"]
script = ExtResource("10")
agility = 1.0
dexterity = 1.0
strength = 1.0
endurance = 1.0
attunement = 1.0
perception = 1.0
luck = 1.0
overclock = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(14, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(16, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 16.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("9")
base_stats = SubResource("player_base_stats")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_1")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")
max_health = 100.0
base_max_health = 100.0
scales_with_endurance = true

[node name="ExperienceComponent" type="Node" parent="."]
script = ExtResource("11")

[node name="StatusEffectComponent" type="Node" parent="."]
script = ExtResource("12")

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("3")
invincibility_time = 0.5
knockback_on_hit = 80.0
show_blood = true

[node name="HurtboxShape" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_2")

[node name="BasicWeapon" type="Node2D" parent="."]
script = ExtResource("4")
projectile_scene = ExtResource("5")
fire_rate = 0.8
projectile_damage = 10.0
projectile_speed = 200.0

[node name="PunchWeapon" type="Node2D" parent="."]
script = ExtResource("7")
punch_scene = ExtResource("8")

[node name="InventoryComponent" type="Node" parent="."]
script = ExtResource("13")

[node name="InventoryVisual" type="Node2D" parent="."]
script = ExtResource("14")

[node name="PickupCollector" type="Area2D" parent="."]
script = ExtResource("6")

[node name="CollectorShape" type="CollisionShape2D" parent="PickupCollector"]
shape = SubResource("CircleShape2D_1")
